# recitation_by_ayah

./: .env.example  .gitignore  CLAUDE.md  DEV-README.md  README_EN.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
deploy/: Dockerfile.app  Dockerfile.engine
deploy/nginx/: nginx.conf
deploy/scripts/: init-cloudflare-ssl.sh  init-ssl.sh
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
docs/: fix-and-websocket-plan.md
src/quran_muaalem/app/: serve.py  types.py
src/quran_muaalem/engine/: serve.py
tools/: ec2.sh  test_api.html
